fix z-index on modal

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,6 +28,7 @@ nav {
     width: 100%;
     background-color: rgba(255, 255, 255, 0.9);
     border-bottom: 3px solid black;
+    z-index: 5;
 }
 
 nav:hover {
